subprojects {
    apply plugin: 'java'
    apply plugin: 'application'

    group 'io.github.ilnurnasybullin.app'
    version '0.0.1'

    repositories {
        mavenCentral()
    }

    sourceCompatibility = 17
    compileJava.options.encoding = 'UTF-8'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    compileJava {
        doFirst {
            options.compilerArgs += [
                    '--module-path', classpath.asPath
            ]
            classpath = files()
        }
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
        testImplementation 'org.assertj:assertj-core:3.23.1'
        testRuntimeOnly 'org.apiguardian:apiguardian-api:1.1.2'
    }

    test {
        useJUnitPlatform()
    }
}